<resources>
    <string name="app_name">Clothes Search App</string>
    <string name="search">Wyszukaj</string>
    <string name="favourites">Ulubione</string>
    <string name="filters">Moje filtry</string>
    <string name="color_spinner_title">Kolor:</string>
    <string name="size_spinner_title">Rozmiar:</string>
    <string name="price_title">Cena:</string>
    <string name="submit_filter_button">Szukaj</string>
    <string name="sorting_title">Sortuj:</string>
    <string name="ascending_sort">Rosnąco</string>
    <string name="descending_sort">Malejąco</string>
    <string name="type">Typ</string>
    <string name="search_occassion">Szukaj promocji</string>
    <string name="clothes_title">Nazwa ubrania</string>
    <string name="clothes_type">Typ ubrania</string>
    <string name="clothes_price">Cena ubrania</string>
    <string name="see_more">Szczegóły</string>
    <string name="delete">Usuń element</string>
    <string name="clothes_link">Link</string>

<!--    Material UXUI-->
    <string name="set_password">Ustaw hasło</string>
    <string name="full_name">Imię</string>
    <string name="username">Login</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="don_t_have_an_account">Nie masz konta?</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="enteryourname">Wprowadź login</string>
    <string name="validemail">Nieprawidłowy email</string>
    <string name="validpassword">Hasło nie może być puste!</string>
    <string name="privacypolicy">Privacy policy</string>
    <string name="forgot_password">Zapomniałeś hasła?</string>
    <string name="by_using_this_ui_ux_you_agree">by using this ui/ux you agree to our</string>
    <string name="title_activity_sign_up">Rejestracja</string>
    <string name="login_error">Nieprawidłowe dane!</string>
    <string name="username_exists">Login jest już wykorzystany</string>
    <string name="privacypolicyterms">

        <b>FREE</b> \nEach download allows the buyer to use the product for personal use only. You’ll need to purchase a commercial license if you’re not willing to make the modified version public. \n\n

        <b>SINGLE</b> \nEach purchase allows the buyer to use the product, for one project and for commercial use but end users cannot be charged for. This license allows you to keep your project private and use it in only one project.\n\n

        <b>EXTENDED</b> \nEach purchase allows the buyer to use the product, for an unlimited amount of projects, for commercial use, within the same company.\n\n

    </string>
    <string name="OK">OK</string>
    <string name="data">Data</string>
    <string name="token">Token</string>
    <string name="logout">Wylogowanie</string>
    <string name="product_name">Nazwa produktu</string>
    <string name="text">Tekst</string>
    <string name="send_email">Wyślij na maila</string>
    <string name="delete_all">Usuń wszystkie</string>
    <string name="add_scheduler">Rozpocznij poszukiwanie</string>
    <string name="currently_looking">Uruchomione poszukiwania</string>
    <string name="occasion_found">Znaleziono ciuchy spełniające Twoje kryteria!</string>
</resources>
