<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FiltersActivity">

    <Spinner
        android:id="@+id/color_spinner"
        android:layout_width="189dp"
        android:layout_height="45dp"
        android:background="@drawable/spinner_background"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:spinnerMode="dropdown"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/color_spinner_title"
        app:layout_constraintTop_toTopOf="@+id/color_spinner_title" />

    <Spinner
        android:id="@+id/size_spinner"
        android:layout_width="189dp"
        android:layout_height="45dp"
        android:background="@drawable/spinner_background"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:spinnerMode="dropdown"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/size_spinner_title"
        app:layout_constraintTop_toTopOf="@+id/size_spinner_title" />

    <TextView
        android:id="@+id/color_spinner_title"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/color_spinner_title"
        app:layout_constraintEnd_toStartOf="@+id/color_spinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/size_spinner_title"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/size_spinner_title"
        app:layout_constraintEnd_toStartOf="@+id/size_spinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_spinner_title" />

    <TextView
        android:id="@+id/price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:padding="10dp"
        android:text="@string/price_title"
        app:layout_constraintEnd_toStartOf="@+id/lower_price"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_spinner_title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="@+id/lower_price"
        app:layout_constraintEnd_toStartOf="@+id/higher_price"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lower_price" />

    <EditText
        android:id="@+id/lower_price"
        android:layout_width="110dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/price_title"
        app:layout_constraintTop_toTopOf="@+id/price_title" />

    <EditText
        android:id="@+id/higher_price"
        android:layout_width="110dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/lower_price" />

    <Button
        android:id="@+id/submit_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitForm"
        android:text="@string/submit_filter_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ascending_cb" />

    <TextView
        android:id="@+id/sorting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:padding="10dp"
        android:text="@string/sorting_title"
        app:layout_constraintEnd_toStartOf="@+id/ascending_cb"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_title" />

    <CheckBox
        android:id="@+id/ascending_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/ascending_sort"
        app:layout_constraintEnd_toStartOf="@+id/descending_cb"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sorting_title"
        app:layout_constraintTop_toTopOf="@+id/sorting_title" />

    <CheckBox
        android:id="@+id/descending_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/descending_sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ascending_cb"
        app:layout_constraintTop_toTopOf="@+id/ascending_cb" />
</androidx.constraintlayout.widget.ConstraintLayout>